welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (noDoubles==true){
    if (die1==die2){
      if (die2==6){
        return die2=1}
      return die1+die2}
    else 
      return die1+die2
      
    }
   else
    return die1+die2
  }

  